# 1st-Project-of-Python-and-FastApi

./: README.md  pyproject.toml
todo/: main.py
